--- a/runtimes/pangolin/27000/runtime/Cargo.toml
+++ b/runtimes/pangolin/27000/runtime/Cargo.toml
@@ -13,58 +13,58 @@ version    = "2.7.0"
 # crates.io
 array-bytes       = { version = "1.4" }
 codec             = { package = "parity-scale-codec", version = "2.1", default-features = false }
-evm               = { version = "0.27", default-features = false, features = ["with-codec"] }
+evm               = { git = "https://github.com/darwinia-network/evm", branch = "pangolin-27000-runtime-override", default-features = false, features = ["with-codec"] }
 serde             = { version = "1.0", optional = true }
 smallvec          = { version = "1.6" }
 static_assertions = { version = "1.1" }
 # darwinia-network
-bridge-primitives                       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-common-primitives                       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-common-runtime                          = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-balances                       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-balances-rpc-runtime-api       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-bridge-bsc                     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-bridge-ethereum                = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-claims                         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-democracy                      = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-elections-phragmen             = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-evm                            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-evm-precompile-bridge-ethereum = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-evm-precompile-bridge-s2s      = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-evm-precompile-dispatch        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-evm-precompile-simple          = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-evm-precompile-transfer        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-fee-market                     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-fee-market-rpc-runtime-api     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-header-mmr                     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-header-mmr-rpc-runtime-api     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-relay-authorities              = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-relay-primitives               = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-relayer-game                   = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-staking                        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-staking-rpc-runtime-api        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-support                        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-darwinia-vesting                        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-dp-asset                                = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-dp-contract                             = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-dp-evm                                  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-dp-fee                                  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-dp-s2s                                  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-dvm-ethereum                            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-dvm-rpc-runtime-api                     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-ethereum-primitives                     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-from-ethereum-issuing                   = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-from-substrate-issuing                  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-module-transaction-pause                = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-to-ethereum-backing                     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
-to-tron-backing                         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", rev = "567af4d9cbf16694cea7823d2087a3872d2d26c5" }
+bridge-primitives                       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+common-primitives                       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+common-runtime                          = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-balances                       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-balances-rpc-runtime-api       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-bridge-bsc                     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-bridge-ethereum                = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-claims                         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-democracy                      = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-elections-phragmen             = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-evm                            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-evm-precompile-bridge-ethereum = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-evm-precompile-bridge-s2s      = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-evm-precompile-dispatch        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-evm-precompile-simple          = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-evm-precompile-transfer        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-fee-market                     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-fee-market-rpc-runtime-api     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-header-mmr                     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-header-mmr-rpc-runtime-api     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-relay-authorities              = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-relay-primitives               = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-relayer-game                   = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-staking                        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-staking-rpc-runtime-api        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-support                        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+darwinia-vesting                        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+dp-asset                                = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+dp-contract                             = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+dp-evm                                  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+dp-fee                                  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+dp-s2s                                  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+dvm-ethereum                            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+dvm-rpc-runtime-api                     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+ethereum-primitives                     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+from-ethereum-issuing                   = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+from-substrate-issuing                  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+module-transaction-pause                = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+to-ethereum-backing                     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
+to-tron-backing                         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "pangolin-27000-runtime-override" }
 # dvm trace
-dp-evm-trace-apis   = { default-features = false, path = "../tracing/apis" }
-dp-evm-trace-events = { optional = true, default-features = false, path = "../tracing/events" }
-dp-evm-trace-ext    = { default-features = false, path = "../tracing/ext" }
-dp-evm-tracer       = { optional = true, default-features = false, path = "../tracing/tracer" }
-rlp                 = { optional = true, default-features = false, version = "0.5" }
-sha3                = { optional = true, default-features = false, version = "0.8" }
+# dp-evm-trace-apis   = { default-features = false, path = "../tracing/apis" }
+# dp-evm-trace-events = { optional = true, default-features = false, path = "../tracing/events" }
+# dp-evm-trace-ext    = { default-features = false, path = "../tracing/ext" }
+# dp-evm-tracer       = { optional = true, default-features = false, path = "../tracing/tracer" }
+# rlp                 = { optional = true, default-features = false, version = "0.5" }
+# sha3                = { optional = true, default-features = false, version = "0.8" }
 # paritytech
 bp-message-dispatch                        = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", tag = "darwinia-v0.11.6-3" }
 bp-messages                                = { default-features = false, git = "https://github.com/darwinia-network/parity-bridges-common", tag = "darwinia-v0.11.6-3" }
@@ -129,7 +129,8 @@ sp-version                                 = { default-features = false, git = "
 substrate-wasm-builder = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
 
 [features]
-default = ["std", "evm-tracing"]
+# default = ["std", "evm-tracing"]
+default = ["std"]
 
 std = [
 	# crates.io
@@ -178,12 +179,12 @@ std = [
 	"to-ethereum-backing/std",
 	"to-tron-backing/std",
 	# trace
-	"dp-evm-trace-apis/std",
-	"dp-evm-trace-events/std",
-	"dp-evm-trace-ext/std",
-	"dp-evm-tracer/std",
-	"rlp/std",
-	"sha3/std",
+	# "dp-evm-trace-apis/std",
+	# "dp-evm-trace-events/std",
+	# "dp-evm-trace-ext/std",
+	# "dp-evm-tracer/std",
+	# "rlp/std",
+	# "sha3/std",
 	# paritytech
 	"bp-message-dispatch/std",
 	"bp-messages/std",
@@ -273,8 +274,8 @@ try-runtime = [
 ]
 
 evm-tracing = [
-	"dp-evm-trace-events",
-	"dp-evm-tracer",
-	"rlp",
-	"sha3"
+	# "dp-evm-trace-events",
+	# "dp-evm-tracer",
+	# "rlp",
+	# "sha3"
 ]
