--- a/runtimes/pangolin/27000/tracing/events/Cargo.toml
+++ b/runtimes/pangolin/27000/tracing/events/Cargo.toml
@@ -15,9 +15,9 @@ version     = "2.7.0"
 ethereum        = { version = "0.7.0", default-features = false, features = [ "with-codec" ] }
 ethereum-types  = { version = "0.11.0", default-features = false }
 environmental   = { version = "1.1.2", default-features = false }
-evm             = { git = "https://github.com/darwinia-network/evm", branch = "darwinia", default-features = false, features = [ "with-codec", "tracing"] }
-evm-gasometer   = { git = "https://github.com/darwinia-network/evm", branch = "darwinia", default-features = false, features = [ "tracing"] }
-evm-runtime     = { git = "https://github.com/darwinia-network/evm", branch = "darwinia", default-features = false, features = [ "tracing"] }
+evm             = { git = "https://github.com/darwinia-network/evm", branch = "pangolin-27000-runtime-override", default-features = false, features = [ "with-codec", "tracing"] }
+evm-gasometer   = { git = "https://github.com/darwinia-network/evm", branch = "pangolin-27000-runtime-override", default-features = false, features = [ "tracing"] }
+evm-runtime     = { git = "https://github.com/darwinia-network/evm", branch = "pangolin-27000-runtime-override", default-features = false, features = [ "tracing"] }
 # paritytech
 codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
 
